objects/Payroll_Line__c/Payroll_Line__c.object-meta.xml
<CustomObject>
    <label>Payroll Line</label>
    <nameField>
        <displayFormat>PAYL-{0000000}</displayFormat>
        <label>Payroll Line No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>