objects/Payroll_Line__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description</label>
    <type>TextArea</type>
</CustomField>