objects/Payroll_Line__c/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Position</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Payroll Lines</relationshipLabel>
    <relationshipName>Payroll_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>