objects/Payroll_Line__c/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <label>Payroll</label>
    <referenceTo>Payroll__c</referenceTo>
    <relationshipLabel>Payroll Lines</relationshipLabel>
    <relationshipName>Payroll_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>