objects/Payroll_Line__c/fields/Payroll_Export_ADP_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_ADP_Batch_ID__c</fullName>
    <label>Payroll Export ADP Batch ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>