objects/Payroll_Line__c/fields/Payroll_Export_Earning_Amt__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_Earning_Amt__c</fullName>
    <label>Payroll Export Earning Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>