objects/Payroll_Line__c/fields/Payroll_Export_Earning_Code__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_Earning_Code__c</fullName>
    <label>Payroll Export Earning Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>