objects/Payroll_Line__c/fields/Payroll_Export_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_Employee_Name__c</fullName>
    <label>Payroll Export Employee Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>