objects/Payroll_Line__c/fields/Payroll_Export_File_No__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_File_No__c</fullName>
    <label>Payroll Export File No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>