objects/Payroll_Line__c/fields/Payroll_Export_Hour_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_Hour_Amount__c</fullName>
    <label>Payroll Export Hour Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>