objects/Payroll_Line__c/fields/Payroll_Export_Job_No__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_Job_No__c</fullName>
    <label>Payroll Export Job No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>