objects/Payroll_Line__c/fields/Payroll_Export_OT_Hours__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_OT_Hours__c</fullName>
    <label>Payroll Export OT Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>