objects/Payroll_Line__c/fields/Payroll_Export_Temp_Rate__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export_Temp_Rate__c</fullName>
    <label>Payroll Export Temp Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>