objects/Payroll_Line__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Payroll Lines</relationshipLabel>
    <relationshipName>Payroll_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>