objects/Payroll_Line__c/fields/T_M_Line__c.field-meta.xml
<CustomField>
    <fullName>T_M_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Line</label>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>Payroll Lines</relationshipLabel>
    <relationshipName>Payroll_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>