objects/Payroll_Line__c/fields/Timesheet_Line__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Line</label>
    <referenceTo>Timesheet_Line__c</referenceTo>
    <relationshipLabel>Payroll Lines</relationshipLabel>
    <relationshipName>Payroll_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>