objects/Payroll_Line__c/fields/Unit_Cost_Entered__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Entered__c</fullName>
    <label>Unit Cost Entered</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>