objects/Payroll_Line__c/fields/Work_as_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_as_Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work as Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipLabel>Payroll Lines (Work as Job Position)</relationshipLabel>
    <relationshipName>Payroll_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>